--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "MarketMake-Aave-Workshop",
   "dependencies": {
+    "@typechain/ethers-v5": "^5.0.0",
     "hardhat": "^2.0.8"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
     "ts-node": "^9.1.1",
+    "typechain": "^4.0.1",
     "typescript": "^4.1.3"
   }
 }
